[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
maelstrom-lib = { version = "0.1.0", path = "../maelstrom-lib" }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
