[package]
name = "gcounter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["seqkv"]
seqkv = []
redis = ["dep:redis", "dep:once_cell"]

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.17"
maelstrom-lib = { version = "0.1.0", path = "../maelstrom-lib" }
once_cell = { version = "1.17.1", optional = true }
redis = { version = "0.23.0", features = ["aio", "tokio-comp"], optional = true }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
